# serializer version: 1
# name: test_build_get_dhw_mode
  'RQ --- 18:000730 01:111111 --:------ 1F41 001 00'
# ---
# name: test_build_get_dhw_params
  'RQ --- 18:000730 01:111111 --:------ 10A0 001 00'
# ---
# name: test_build_get_dhw_temp
  'RQ --- 18:000730 01:111111 --:------ 1260 001 00'
# ---
# name: test_build_get_faultlog_entry
  'RQ --- 18:000730 01:111111 --:------ 0418 003 000005'
# ---
# name: test_build_get_mix_valve_params
  'RQ --- 18:000730 01:111111 --:------ 1030 001 00'
# ---
# name: test_build_get_opentherm_data
  'RQ --- 18:000730 10:111111 --:------ 3220 005 00800E0000'
# ---
# name: test_build_get_relay_demand
  'RQ --- 18:000730 13:111111 --:------ 0008 001 00'
# ---
# name: test_build_get_schedule_fragment
  'RQ --- 18:000730 01:111111 --:------ 0404 007 00200008000100'
# ---
# name: test_build_get_schedule_version
  'RQ --- 18:000730 01:111111 --:------ 0006 001 00'
# ---
# name: test_build_get_system_language
  'RQ --- 18:000730 01:111111 --:------ 0100 001 00'
# ---
# name: test_build_get_system_mode
  'RQ --- 18:000730 01:111111 --:------ 2E04 001 FF'
# ---
# name: test_build_get_system_time
  'RQ --- 18:000730 01:111111 --:------ 313F 001 00'
# ---
# name: test_build_get_tpi_params
  'RQ --- 18:000730 01:111111 --:------ 1100 001 00'
# ---
# name: test_build_put_actuator_cycle
  'RP --- 13:111111 01:111111 --:------ 3EF1 007 00006400C864FF'
# ---
# name: test_build_put_actuator_state
  ' I --- 13:111111 --:------ 13:111111 3EF0 003 0064FF'
# ---
# name: test_build_put_bind_accept
  ' W --- 01:111111 13:111111 --:------ 1FC9 006 003EF005B207'
# ---
# name: test_build_put_bind_confirm
  ' I --- 13:111111 01:111111 --:------ 1FC9 006 003EF035B207'
# ---
# name: test_build_put_bind_offer
  ' I --- 13:111111 63:262143 --:------ 1FC9 006 003EF035B207'
# ---
# name: test_build_put_dhw_temp
  ' I --- 07:111111 --:------ 07:111111 1260 003 0013BA'
# ---
# name: test_build_put_faultlog_entry
  ' I --- 01:111111 18:000730 --:------ 0418 022 000001B0060000000000791A600000FFFF700005B207'
# ---
# name: test_build_put_outdoor_temp
  ' I --- 17:111111 --:------ 17:111111 0002 003 0005DC'
# ---
# name: test_build_put_presence_detected
  ' I --- 18:000730 --:------ 18:000730 2E10 002 00C8'
# ---
# name: test_build_put_sensor_temp
  ' I --- 04:111111 --:------ 04:111111 30C9 003 000866'
# ---
# name: test_build_put_weather_temp
  ' I --- 17:000730 --:------ 17:000730 0002 004 0004E201'
# ---
# name: test_build_send_puzzle
  ' I --- 18:000730 63:262142 --:------ 7FFF 014 0010018BCFE5680076302E302E30'
# ---
# name: test_build_set_dhw_mode_parity[0-True-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 00FF00FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[00-None-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 00FF00FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[01-False-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000001FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[02-True-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000102FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[04-False-until11-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 012 000004FFFFFF000C120707EA'
# ---
# name: test_build_set_dhw_mode_parity[1-False-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000001FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[2-True-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000102FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[4-True-until3-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 012 000104FFFFFF000C120707EA'
# ---
# name: test_build_set_dhw_mode_parity[advanced_override-True-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000101FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[follow_schedule-None-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 00FF00FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[permanent_override-False-None-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 006 000002FFFFFF'
# ---
# name: test_build_set_dhw_mode_parity[temporary_override-True-until7-None]
  ' W --- 18:000730 01:111111 --:------ 1F41 012 000104FFFFFF000C120707EA'
# ---
# name: test_build_set_dhw_params_parity[30.0-0-1.0]
  ' W --- 18:000730 01:111111 --:------ 10A0 006 000BB8000064'
# ---
# name: test_build_set_dhw_params_parity[50.0-5-1.0]
  ' W --- 18:000730 01:111111 --:------ 10A0 006 001388050064'
# ---
# name: test_build_set_dhw_params_parity[55.0-8-2.0]
  ' W --- 18:000730 01:111111 --:------ 10A0 006 00157C0800C8'
# ---
# name: test_build_set_dhw_params_parity[85.0-10-10.0]
  ' W --- 18:000730 01:111111 --:------ 10A0 006 0021340A03E8'
# ---
# name: test_build_set_mix_valve_params
  ' W --- 18:000730 01:111111 --:------ 1030 016 00C80137C9010FCA0196CB010FCC0101'
# ---
# name: test_build_set_mode_countdown_override
  ' W --- 18:000730 01:111111 --:------ 2349 007 0308980300003C'
# ---
# name: test_build_set_mode_follow_schedule
  ' W --- 18:000730 01:111111 --:------ 2349 007 037FFF00FFFFFF'
# ---
# name: test_build_set_mode_permanent_override
  ' W --- 18:000730 01:111111 --:------ 2349 007 03089802FFFFFF'
# ---
# name: test_build_set_mode_temporary_override
  ' W --- 18:000730 01:111111 --:------ 2349 013 03089804FFFFFF000C0F0107EA'
# ---
# name: test_build_set_name
  ' W --- 18:000730 01:111111 --:------ 0004 022 03004C6976696E6720526F6F6D000000000000000000'
# ---
# name: test_build_set_schedule_fragment
  ' W --- 18:000730 01:111111 --:------ 0404 012 002000080501030011223344'
# ---
# name: test_build_set_system_mode
  ' W --- 18:000730 01:111111 --:------ 2E04 008 01FFFFFFFFFFFF00'
# ---
# name: test_build_set_system_time
  ' W --- 18:000730 01:111111 --:------ 313F 009 006000000C120707EA'
# ---
# name: test_build_set_temperature
  ' W --- 18:000730 01:111111 --:------ 2309 003 030834'
# ---
# name: test_build_set_tpi_params
  ' W --- 18:000730 01:111111 --:------ 1100 008 000C141400009601'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-False-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021303E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-False-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021203E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-False-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021103E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-False-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021003E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-True-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020303E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-True-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020203E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-True-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020103E809C4'
# ---
# name: test_build_set_zone_config_parity[10.0-25.0-True-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020003E809C4'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-False-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021308340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-False-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021208340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-False-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021108340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-False-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021008340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-True-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020308340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-True-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020208340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-True-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020108340834'
# ---
# name: test_build_set_zone_config_parity[21.0-21.0-True-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020008340834'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-False-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021301F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-False-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021201F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-False-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021101F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-False-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 021001F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-True-False-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020301F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-True-False-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020201F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-True-True-False]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020101F40DAC'
# ---
# name: test_build_set_zone_config_parity[5.0-35.0-True-True-True]
  ' W --- 18:000730 01:111111 --:------ 000A 006 020001F40DAC'
# ---
# name: test_build_set_zone_mode_parity[0-15.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 0005DC00FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[00-None-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 007FFF00FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[01-20.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 0007D001FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[02-21.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 00083402FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[04-22.0-until11-None]
  ' W --- 18:000730 01:111111 --:------ 2349 013 00089804FFFFFF000C120707EA'
# ---
# name: test_build_set_zone_mode_parity[1-21.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 00083401FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[2-22.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 00089802FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[4-10.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 0003E804FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[advanced_override-20.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 0007D001FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[follow_schedule-None-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 007FFF00FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[permanent_override-21.0-None-None]
  ' W --- 18:000730 01:111111 --:------ 2349 007 00083402FFFFFF'
# ---
# name: test_build_set_zone_mode_parity[temporary_override-22.0-until7-None]
  ' W --- 18:000730 01:111111 --:------ 2349 013 00089804FFFFFF000C120707EA'
# ---
# name: test_build_set_zone_name_parity[12345678901234567890]
  ' W --- 18:000730 01:111111 --:------ 0004 022 01003132333435363738393031323334353637383930'
# ---
# name: test_build_set_zone_name_parity[A]
  ' W --- 18:000730 01:111111 --:------ 0004 022 01004100000000000000000000000000000000000000'
# ---
# name: test_build_set_zone_name_parity[Extremely Long Zone Name That Exceeds The Limit Of Characters]
  ' W --- 18:000730 01:111111 --:------ 0004 022 010045787472656D656C79204C6F6E67205A6F6E6520'
# ---
# name: test_build_set_zone_name_parity[Living Room]
  ' W --- 18:000730 01:111111 --:------ 0004 022 01004C6976696E6720526F6F6D000000000000000000'
# ---
# name: test_build_set_zone_name_parity[]
  ' W --- 18:000730 01:111111 --:------ 0004 022 01000000000000000000000000000000000000000000'
# ---
# name: test_build_set_zone_setpoint_parity[10.0]
  ' W --- 18:000730 01:111111 --:------ 2309 003 0003E8'
# ---
# name: test_build_set_zone_setpoint_parity[15.5]
  ' W --- 18:000730 01:111111 --:------ 2309 003 00060E'
# ---
# name: test_build_set_zone_setpoint_parity[21.0]
  ' W --- 18:000730 01:111111 --:------ 2309 003 000834'
# ---
# name: test_build_set_zone_setpoint_parity[21.5]
  ' W --- 18:000730 01:111111 --:------ 2309 003 000866'
# ---
# name: test_build_set_zone_setpoint_parity[30.0]
  ' W --- 18:000730 01:111111 --:------ 2309 003 000BB8'
# ---
# name: test_build_set_zone_setpoint_parity[35.0]
  ' W --- 18:000730 01:111111 --:------ 2309 003 000DAC'
# ---
# name: test_build_set_zone_setpoint_parity[5.0]
  ' W --- 18:000730 01:111111 --:------ 2309 003 0001F4'
# ---
